--- a/americanSignLanguage/webTemplates/index.html
+++ b/americanSignLanguage/webTemplates/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-  <title>HYPER Talk</title>
+  <title>HyperTalk</title>
   <link href="{%static 'assets/myimages/favicon.jpg ' %}" rel="icon">
 
   <!-- Bootstrap core CSS -->
