speech to asl mic added

--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -184,7 +184,60 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>Content for Text to sign language modal goes here.</p>
+                        <div>
+                            <div id='result'>
+                              Your text will  appear here
+                            </div>
+                            <br>
+                            <div id= 'record'>
+                                <button onclick="startConverting()" class='btn btn-info btn-sm' id="re">record</button>
+                                <button class='btn btn-info btn-sm ml-3' value="Send" id="send">Send</button>
+                            </div>
+                          
+                            <script>
+                               function startConverting()
+                                      {
+                                        document.getElementById("re").style.visibility = "hidden";   
+                                        var r=document.getElementById('result');
+                                        var spr=new webkitSpeechRecognition(); //Initialisation of web Kit
+                                          spr.continuous=false; //True if continous conversion is needed, false to stop transalation when paused 
+                                          spr.interimResults=true;
+                                          spr.lang='en-IN'; // Set Input language
+                                          spr.start(); //Start Recording the voice 
+                                          var ftr='';
+                                          spr.onresult=function(event){
+                                              var interimTranscripts='';
+                                              for(var i=event.resultIndex;i<event.results.length;i++)
+                                              {
+                                                  var transcript=event.results[i][0].transcript;
+                                                  transcript.replace("\n","<br>")
+                                                  if(event.results[i].isFinal){
+                                                      ftr+=transcript;
+                                                  }
+                                                  else
+                                                  interimTranscripts+=transcript;
+                                              }
+                                              r.innerHTML=ftr +interimTranscripts ;
+                                          };
+                                          spr.onerror=function(event){};
+                                      }
+                                      $(document).ready(function() {
+                                          $("#send").click(function(event){
+                                                $.ajax({
+                                                    type:"POST",
+                                                    url:"/audio_data/",
+                                                    data: {
+                                                            send : $('#result').html()
+                                                            },
+                                                    success: function(){
+                                                        alert("Audio succesfully Submitted");
+                                                    }
+                                                });
+                                          });
+                                        });
+                            </script>
+                          </div>
+                        
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
