--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -68,7 +68,7 @@
                             <a class="nav-link scrollto active" href="#hero">Home</a>
                         </li>
                         <li>
-                            <a class="nav-link scrollto" href="#about">About</a>
+                            <a class="nav-link scrollto" href="{% url 'about' %}">About</a>
                         </li>
                         <li>
                             <a class="nav-link scrollto" href="#team">Team</a>
@@ -78,7 +78,7 @@
                             <a class="nav-link scrollto" href="{% url 'contactus' %}">Contact Us</a>
                         </li>
                         <li>
-                            <a class="getstarted scrollto" href="#about">Get Started</a>
+                            <a class="getstarted scrollto" href="{% url 'about' %}">Get Started</a>
                         </li>
                     </ul>
                     <i class="bi bi-list mobile-nav-toggle"></i>
