--- a/americanSignLanguage/webTemplates/aboutus.html
+++ b/americanSignLanguage/webTemplates/aboutus.html
@@ -38,7 +38,7 @@
                             <a class="nav-link scrollto" href="{% url 'about' %}">About</a>
                         </li>
                         <li>
-                            <a class="nav-link scrollto" href="#team">Team</a>
+                            <a class="nav-link scrollto" href="{% url 'team' %}">Team</a>
                         </li>
 
                         <li>
