--- a/americanSignLanguage/webTemplates/team.html
+++ b/americanSignLanguage/webTemplates/team.html
@@ -58,89 +58,101 @@
         <!-- End Header -->
 
 
-        <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact">
+        <!-- ======= Team Section ======= -->
+        <section id="team" class="team section-bg">
             <div class="container">
 
-                <div class="section-title" data-aos="fade-up">
-                    <h2>HyperTalk</h2>
+                <div class="section-title team" data-aos="fade-up">
+                    <h2>Team</h2>
+                    <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p> -->
                 </div>
 
                 <div class="row">
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-                        <div class="contact-about">
-                            <h3>HyperTalk</h3>
-                            <p>Thank you for your interest in our website. If you have any questions or comments, 
-                                                            please feel free to contact us using the form below. We value your feedback and will 
-                                                            do our best to respond to your inquiry as soon as possible.</p>
-                            <div class="social-links">
-                                <a href="#" class="twitter">
-                                    <i class="bi bi-twitter"></i>
-                                </a>
-                                <a href="#" class="facebook">
-                                    <i class="bi bi-facebook"></i>
-                                </a>
-                                <a href="#" class="instagram">
-                                    <i class="bi bi-instagram"></i>
-                                </a>
-                                <a href="#" class="linkedin">
-                                    <i class="bi bi-linkedin"></i>
-                                </a>
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="fade-up" data-aos-delay="100">
+                            <div class="member-img">
+                                <img src="{% static'assets/myimages/member1.jpg' %}" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="">
+                                        <i class="bi bi-twitter"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="member-info">
+                                <h4>Hasitha Gallella</h4>
+                                <span>University of Moratuwa</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
-                        <div class="info">
-                            <div>
-                                <i class="ri-map-pin-line"></i>
-                                <p>A108 Adam Street<br>New York, NY 535022</p>
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="fade-up" data-aos-delay="200">
+                            <div class="member-img">
+                                <img src="{% static'assets/myimages/member2.jpg' %}" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="">
+                                        <i class="bi bi-twitter"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
                             </div>
-
-                            <div>
-                                <i class="ri-mail-send-line"></i>
-                                <p>info@example.com</p>
+                            <div class="member-info">
+                                <h4>Kavindu Damsith</h4>
+                                <span>University of Moratuwa</span>
                             </div>
-
-                            <div>
-                                <i class="ri-phone-line"></i>
-                                <p>+1 5589 55488 55s</p>
-                            </div>
-
                         </div>
                     </div>
 
-                    <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                            <div class="form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="fade-up" data-aos-delay="300">
+                            <div class="member-img">
+                                <img src="{% static'assets/myimages/member3.jpg' %}" class="img-fluid" alt="">
+                                <div class="social">
+                                    <a href="">
+                                        <i class="bi bi-twitter"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                            <div class="member-info">
+                                <h4>Malitha Prabhashana</h4>
+                                <span>University of Moratuwa</span>
                             </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                            </div>
-                            <div class="my-3">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
-                            </div>
-                            <div class="text-center">
-                                <button type="submit">Send Message</button>
-                            </div>
-                        </form>
+                        </div>
                     </div>
 
                 </div>
 
             </div>
         </section>
-        <!-- End Contact Section -->
+        <!-- End Team Section -->
+
 
     </body>
 </html>
