--- a/americanSignLanguage/webTemplates/contactus.html
+++ b/americanSignLanguage/webTemplates/contactus.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Us</title>
+        <link href="{%static 'assets/myimages/favicon.jpg' %}" rel="icon">
+
         <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
@@ -21,7 +23,7 @@
             <div class="container d-flex align-items-center justify-content-between">
 
                 <div class="logo">
-                    <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px">
+                    <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px" class="hypertalk-logo">
 
                     <h1>
                         <a href="index.html">HyperTalk</a>
@@ -72,8 +74,8 @@
                         <div class="contact-about">
                             <h3>HyperTalk</h3>
                             <p>Thank you for your interest in our website. If you have any questions or comments, 
-                                                            please feel free to contact us using the form below. We value your feedback and will 
-                                                            do our best to respond to your inquiry as soon as possible.</p>
+                                                                                            please feel free to contact us using the form below. We value your feedback and will 
+                                                                                            do our best to respond to your inquiry as soon as possible.</p>
                             <div class="social-links">
                                 <a href="#" class="twitter">
                                     <i class="bi bi-twitter"></i>
@@ -141,6 +143,59 @@
             </div>
         </section>
         <!-- End Contact Section -->
+
+        <!-- ======= Footer ======= -->
+        <footer id="footer">
+            <div class="container">
+                <div class="row d-flex align-items-center">
+                    <div class="col-lg-6 text-lg-left text-center">
+                        <div class="copyright">
+                            &copy; Copyright
+                            <strong>HyperTalk</strong>. All Rights Reserved
+                        </div>
+                        <div class="credits">
+                            <!-- All the links in the footer should remain intact. -->
+                            <!-- You can delete the links only if you purchased the pro version. -->
+                            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/vesperr-free-bootstrap-template/ -->
+                            Designed by
+                                <a href="{% url 'team' %}"> HyperBits</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
+                            <a href="{% url 'home' %}" class="scrollto">Home</a>
+                            <a href="{% url 'about' %}" class="scrollto">About</a>
+                            <a href="#">Privacy Policy</a>
+                            <a href="#">Terms of Use</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- End Footer -->
+
+        <!-- Vendor JS Files -->
+        <script src="{%static 'assets_final/vendor/purecounter/purecounter_vanilla.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/aos/aos.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/glightbox/js/glightbox.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/swiper/swiper-bundle.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/php-email-form/validate.js' %}"></script>
+
+        <!-- Bootstrap core JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+        <!-- Template Main JS File -->
+        <script src="{%static 'assets_final/js/nav.js' %}"></script>
+        <script src="{%static 'assets_final/js/main.js' %}"></script>
+
+        <!-- Scripts -->
+        <!-- Bootstrap core JavaScript -->
+        <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
 
     </body>
 </html>
