--- a/americanSignLanguage/webTemplates/team.html
+++ b/americanSignLanguage/webTemplates/team.html
@@ -6,11 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Us</title>
+        <link href="{%static 'assets/myimages/favicon.jpg' %}" rel="icon">
+
         <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/css/custom.css' %}" rel="stylesheet">
-
 
     </head>
 
@@ -21,7 +22,7 @@
             <div class="container d-flex align-items-center justify-content-between">
 
                 <div class="logo">
-                    <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px">
+                    <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px" class="hypertalk-logo">
 
                     <h1>
                         <a href="index.html">HyperTalk</a>
@@ -39,7 +40,7 @@
                             <a class="nav-link scrollto" href="{% url 'about' %}">About</a>
                         </li>
                         <li>
-                            <a class="nav-link scrollto" href="#team">Team</a>
+                            <a class="nav-link scrollto" href="{% url 'team' %}">Team</a>
                         </li>
 
                         <li>
@@ -60,19 +61,19 @@
 
         <!-- ======= Team Section ======= -->
         <section id="team" class="team section-bg">
-            <div class="container">
 
-                <div class="section-title team" data-aos="fade-up">
-                    <h2>Team</h2>
-                    <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p> -->
-                </div>
+            <div class="section-title team" data-aos="fade-up">
+                <h2>Team</h2>
+                <h3>HyperBits</h3>
+                <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p> -->
+            </div>
+            <div class="container col-8">
+                <div class="row text-center">
 
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="100">
                             <div class="member-img">
-                                <img src="{% static'assets/myimages/member1.jpg' %}" class="img-fluid" alt="">
+                                <img src="{%static 'assets/myimages/member1.jpg' %}" class="img-fluid member-img" alt="">
                                 <div class="social">
                                     <a href="">
                                         <i class="bi bi-twitter"></i>
@@ -90,15 +91,17 @@
                             </div>
                             <div class="member-info">
                                 <h4>Hasitha Gallella</h4>
+                                <span>Undergraduate</span>
+                                <span>Department of Electronic & Telecommunication Engineering</span>
                                 <span>University of Moratuwa</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="200">
                             <div class="member-img">
-                                <img src="{% static'assets/myimages/member2.jpg' %}" class="img-fluid" alt="">
+                                <img src="{%static 'assets/myimages/member2.jpg' %}" class="img-fluid member-img" alt="">
                                 <div class="social">
                                     <a href="">
                                         <i class="bi bi-twitter"></i>
@@ -116,15 +119,17 @@
                             </div>
                             <div class="member-info">
                                 <h4>Kavindu Damsith</h4>
+                                <span>Undergraduate</span>
+                                <span>Department of Computer Science & Engineering</span>
                                 <span>University of Moratuwa</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                         <div class="member" data-aos="fade-up" data-aos-delay="300">
                             <div class="member-img">
-                                <img src="{% static'assets/myimages/member3.jpg' %}" class="img-fluid" alt="">
+                                <img src="{%static 'assets/myimages/member3.jpg' %}" class="img-fluid member-img" alt="">
                                 <div class="social">
                                     <a href="">
                                         <i class="bi bi-twitter"></i>
@@ -142,17 +147,67 @@
                             </div>
                             <div class="member-info">
                                 <h4>Malitha Prabhashana</h4>
+                                <span>Undergraduate</span>
+                                <span>Department of Electrical Engineering</span>
                                 <span>University of Moratuwa</span>
                             </div>
                         </div>
                     </div>
 
                 </div>
-
             </div>
-        </section>
-        <!-- End Team Section -->
+        </div>
+    </body>
+</html></section><!-- End Team Section --><!-- ======= Footer ======= --><footer id="footer">
+<div class="container">
+    <div class="row d-flex align-items-center">
+        <div class="col-lg-6 text-lg-left text-center">
+            <div class="copyright">
+                &copy; Copyright
+                <strong>HyperTalk</strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/vesperr-free-bootstrap-template/ -->
+                Designed by
+                    <a href="{% url 'team' %}"> HyperBits</a>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
+                <a href="{% url 'home' %}" class="scrollto">Home</a>
+                <a href="{% url 'about' %}" class="scrollto">About</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Use</a>
+            </nav>
+        </div>
+    </div>
+</div></footer><!-- End Footer -->
 
+        <!-- Vendor JS Files -->
+        <script src="{%static 'assets_final/vendor/purecounter/purecounter_vanilla.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/aos/aos.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/glightbox/js/glightbox.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/swiper/swiper-bundle.min.js' %}"></script>
+        <script src="{%static 'assets_final/vendor/php-email-form/validate.js' %}"></script>
+
+        <!-- Bootstrap core JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+        <!-- Template Main JS File -->
+        <script src="{%static 'assets_final/js/main.js' %}"></script>
+        <script src="{%static 'assets_final/js/nav.js' %}"></script>
+
+        <!-- Scripts -->
+        <!-- Bootstrap core JavaScript -->
+        <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
 
     </body>
 </html>
+
