--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -108,8 +108,8 @@
                             data-aos="fade-up" data-aos-delay="800">
                             <!-- Button trigger modal -->
                             <div>
-                                <a href="#" class="btn-get-started scrollto btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#sign-language-modal">Sign language to Text</a>
-                                <a href="#" class="btn-services scrollto btn" data-bs-toggle="modal" data-bs-target="#text-to-sign-language-modal">Text to Sign language</a>
+                                <a href="#" class="btn-get-started scrollto btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#sign-language-modal">Sign language to Speech</a>
+                                <a href="#" class="btn-services scrollto btn" data-bs-toggle="modal" data-bs-target="#text-to-sign-language-modal">Speech to Sign language</a>
                             </div>
                         </div>
                     </div>
@@ -121,11 +121,11 @@
         </section>
 
         <!-- Sign language to text modal -->
-        <div class="modal fade" id="sign-language-modal" tabindex="-1" aria-labelledby="sign-language-modal-label" aria-hidden="true">
+        <div class="modal fade custom-modal" id="sign-language-modal" tabindex="-1" aria-labelledby="sign-language-modal-label" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="sign-language-modal-label">Sign language to text</h5>
+                        <h5 class="modal-title" id="sign-language-modal-label">Sign language to Speech</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div
@@ -183,11 +183,11 @@
         </div>
 
         <!-- Text to sign language modal -->
-        <div class="modal fade" id="text-to-sign-language-modal" tabindex="-1" aria-labelledby="text-to-sign-language-modal-label" aria-hidden="true">
+        <div class="modal fade custom-modal" id="text-to-sign-language-modal" tabindex="-1" aria-labelledby="text-to-sign-language-modal-label" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="text-to-sign-language-modal-label">Text to sign language</h5>
+                        <h5 class="modal-title" id="text-to-sign-language-modal-label">Speech to sign language</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
