--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -35,15 +35,6 @@
         <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link
         href="{%static 'assets_final/css/custom.css' %}" rel="stylesheet">
-
-
-    <!-- =======================================================
-                                              * Template Name: HyperTalk
-                                              * Updated: Mar 10 2023 with Bootstrap v5.2.3
-                                              * Template URL: https://bootstrapmade.com/vesperr-free-bootstrap-template/
-                                              * Author: BootstrapMade.com
-                                              * License: https://bootstrapmade.com/license/
-                                              ======================================================== -->
     </head>
 
     <body>
@@ -58,8 +49,6 @@
                     <h1>
                         <a href="index.html">HyperTalk</a>
                     </h1>
-                    <!-- Uncomment below if you prefer to use an image logo -->
-                    <!-- <a href="index.html">img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" class="img-fluid"></a>-->
                 </div>
 
                 <nav id="navbar" class="navbar">
@@ -95,9 +84,9 @@
 
             <div class="hero-overlay"></div>
 
-            <div class="container position-relative">
+            <div class="container position-relative main-content">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 logo-img">
                         <img style="border-radius: 35px;" src="{% static 'assets/myimages/favicon.jpg' %}" alt="Hypertalk logo" class="img-fluid" width="200px" height="200px">
                     </div>
 
@@ -303,10 +292,6 @@
                             <strong>HyperTalk</strong>. All Rights Reserved
                         </div>
                         <div class="credits">
-                            <!-- All the links in the footer should remain intact. -->
-                            <!-- You can delete the links only if you purchased the pro version. -->
-                            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/vesperr-free-bootstrap-template/ -->
                             Designed by
                                 <a href="{% url 'team' %}"> HyperBits</a>
                         </div>
