--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -219,8 +219,8 @@
                 <div class="container">
 
                     <div class="section-title" data-aos="fade-up">
-                        <h2>Our mission</h2>
-                        <p>HyperTalk is the World's first real time Sign Language translator Mobile app for both Android and IOS, Hyper Bit technologies mission is to;</p>
+                        <h2>Services</h2>
+                        <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
                     </div>
 
                     <div class="row">
@@ -230,11 +230,9 @@
                                     <i class="bx bxl-dribbble"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">From disabled to abled:</a>
+                                    <a href="">Lorem Ipsum</a>
                                 </h4>
-                                <p class="description">Many forms of disabilities are common in our society. This includes communication disabilities like
-                                    deaf and speech-impaired individuals who have a big difficulty when it comes to day-to-day life. Our
-                                    app is the perfect solution for these patients.</p>
+                                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                             </div>
                         </div>
 
@@ -244,11 +242,9 @@
                                     <i class="bx bx-file"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Educational tool:
-                                    </a>
+                                    <a href="">Sed ut perspiciatis</a>
                                 </h4>
-                                <p class="description">To provide an educational tool for anyone who wants to learn ASL by supporting different languages
-                                    and providing real-time translation.</p>
+                                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
                             </div>
                         </div>
 
@@ -258,10 +254,9 @@
                                     <i class="bx bx-tachometer"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Accessibility through SmartPhone:</a>
+                                    <a href="">Magni Dolores</a>
                                 </h4>
-                                <p class="description">To improve communication and accessibility for deaf individuals who use ASL by providing real-time
-                                    translation into English and, eventually, other languages by simply using their smartphones.</p>
+                                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                             </div>
                         </div>
 
@@ -271,12 +266,9 @@
                                     <i class="bx bx-world"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Novelty and Currently no similar apps available:
-                                    </a>
+                                    <a href="">Nemo Enim</a>
                                 </h4>
-                                <p class="description">There are currently no similar apps available in app stores that offer effective real-time ASL
-                                    translation, making HyperTalk a unique and innovative solution.
-                                    </p>
+                                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                             </div>
                         </div>
 
