--- a/americanSignLanguage/webTemplates/team.html
+++ b/americanSignLanguage/webTemplates/team.html
@@ -8,10 +8,11 @@
         <title>Contact Us</title>
         <link href="{%static 'assets/myimages/favicon.jpg' %}" rel="icon">
 
-        <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/css/custom.css' %}" rel="stylesheet">
+    
     </head>
 
 
@@ -26,14 +27,12 @@
                     <h1>
                         <a href="index.html">HyperTalk</a>
                     </h1>
-                    <!-- Uncomment below if you prefer to use an image logo -->
-                    <!-- <a href="index.html">img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" class="img-fluid"></a>-->
                 </div>
 
                 <nav id="navbar" class="navbar">
                     <ul>
                         <li>
-                            <a class="nav-link scrollto active" href="#hero">Home</a>
+                            <a class="nav-link scrollto active" href="{% url 'home' %}">Home</a>
                         </li>
                         <li>
                             <a class="nav-link scrollto" href="{% url 'about' %}">About</a>
@@ -188,6 +187,11 @@
         </div>
     </footer>
     <!-- End Footer -->     
+
+        <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
+        <script src="{%static 'assets_final/js/main.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
