site change again

--- a/americanSignLanguage/webTemplates/aboutus.html
+++ b/americanSignLanguage/webTemplates/aboutus.html
@@ -33,7 +33,7 @@
                     <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px" class="hypertalk-logo">
 
                     <h1>
-                        <a href="index.html">HyperTalk</a>
+                        <a href="{% url 'home' %}">HyperTalk</a>
                     </h1>
                 </div>
 
