--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -47,7 +47,7 @@
                     <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px" class="hypertalk-logo">
 
                     <h1>
-                        <a href="index.html">HyperTalk</a>
+                        <a href="{% url 'home' %}">HyperTalk</a>
                     </h1>
                 </div>
 
@@ -219,8 +219,8 @@
                 <div class="container">
 
                     <div class="section-title" data-aos="fade-up">
-                        <h2>Services</h2>
-                        <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
+                        <h2>OUR MISSION</h2>
+                        <p>HyperTalk is the World's first real time Sign Language translator Mobile app for both Android and IOS, Hyper Bit technologies mission is to,</p>
                     </div>
 
                     <div class="row">
@@ -230,9 +230,9 @@
                                     <i class="bx bxl-dribbble"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Lorem Ipsum</a>
+                                    <a href="">From disabled to abled:</a>
                                 </h4>
-                                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                                <p class="description">Many forms of disabilities are common in our society. This includes communication disabilities like deaf and speech-impaired individuals who have a big difficulty when it comes to day-to-day life. Our app is the perfect solution for these patients.</p>
                             </div>
                         </div>
 
@@ -242,9 +242,9 @@
                                     <i class="bx bx-file"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Sed ut perspiciatis</a>
+                                    <a href="">Educational tool:</a>
                                 </h4>
-                                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                                <p class="description">To provide an educational tool for anyone who wants to learn ASL by supporting different languages and providing real-time translation.</p>
                             </div>
                         </div>
 
@@ -254,9 +254,9 @@
                                     <i class="bx bx-tachometer"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Magni Dolores</a>
+                                    <a href="">Accessibility through SmartPhone:</a>
                                 </h4>
-                                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                                <p class="description">To improve communication and accessibility for deaf individuals who use ASL by providing real-time translation into English and, eventually, other languages by simply using their smartphones.</p>
                             </div>
                         </div>
 
@@ -266,9 +266,9 @@
                                     <i class="bx bx-world"></i>
                                 </div>
                                 <h4 class="title">
-                                    <a href="">Nemo Enim</a>
+                                    <a href="">Novelty and Currently no similar apps available:</a>
                                 </h4>
-                                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                                <p class="description">There are currently no similar apps available in app stores that offer effective real-time ASL translation, making HyperTalk a unique and innovative solution.</p>
                             </div>
                         </div>
 
