--- a/americanSignLanguage/webTemplates/contactus.html
+++ b/americanSignLanguage/webTemplates/contactus.html
@@ -26,7 +26,7 @@
                     <img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" width="40px" height="40px" class="hypertalk-logo">
 
                     <h1>
-                        <a href="index.html">HyperTalk</a>
+                        <a href="{% url 'home' %}">HyperTalk</a>
                     </h1>
                     <!-- Uncomment below if you prefer to use an image logo -->
                     <!-- <a href="index.html">img src="{%static 'assets/myimages/favicon.jpg'%}" alt="" class="img-fluid"></a>-->
