index_final html code's ASL to Speech buttons configured

--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -141,13 +141,12 @@
 
                                     <div class="col-md-12" style="border-radius: 10px">
                                         <div class="row">
-                                            <div class="container d-flex align-items-center justify-content-center">
-
-                                                <button id="start-camera" class="btn btn-success btn-lg mt-3 mb-3 ">Start Capturing</button>
-                                                <button id="stop-camera" class="btn btn-danger btn-lg mt-3 displayNone mb-3 ">Stop Capturing</button>
-                                                <br>
-                                                <button id="readWord" style="width: 100%;" class="btn btn-warning btn-lg mt-5 displayNone ">Read</button>
+                                            <div class="container d-flex flex-column align-items-center justify-content-center">
+                                            <button id="start-camera" class="btn btn-success btn-lg mt-4 mb-3">Start Capturing</button>
+                                            <button id="stop-camera" style="margin-top: 20px" class="btn btn-danger btn-lg mb-3 displayNone">Stop Capturing</button>
+                                            <button id="readWord" style="width: 100%;" class="btn btn-warning btn-lg mt-5 displayNone">Read</button>
                                             </div>
+
 
                                             <div class="col-md-9 mt-5">
                                                 <h4 id="showWord" style="color:rgb(21, 255, 0); word-wrap: break-word;"></h4>
